@@ -10,11 +10,11 @@
  *
  * geOrchestra is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
- * FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for
+ * FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
  * more details.
  *
  * You should have received a copy of the GNU General Public License along with
- * geOrchestra.  If not, see <http://www.gnu.org/licenses/>.
+ * geOrchestra. If not, see <http://www.gnu.org/licenses/>.
  */
 package org.georchestra.gateway.security.oauth2;
 
@@ -26,7 +26,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import org.georchestra.security.model.GeorchestraUser;
@@ -42,6 +41,14 @@ import lombok.NonNull;
 import lombok.experimental.Accessors;
 import lombok.extern.slf4j.Slf4j;
 
+/**
+ * Configuration properties for extracting custom OpenID Connect (OIDC) claims.
+ * <p>
+ * This class allows configuring how user information such as ID, roles, and
+ * organization details are extracted from an OAuth2/OIDC authentication token
+ * using JSONPath expressions.
+ * </p>
+ */
 @ConfigurationProperties(prefix = "georchestra.gateway.security.oidc.claims")
 @Slf4j(topic = "org.georchestra.gateway.security.oauth2")
 public @Data class OpenIdConnectCustomClaimsConfigProperties {
@@ -56,14 +63,33 @@ public @Data class OpenIdConnectCustomClaimsConfigProperties {
 
     private Map<String, OpenIdConnectCustomClaimsConfigProperties> provider = new HashMap<>();
 
+    /**
+     * Retrieves the JSONPath extractor configuration for extracting the user ID.
+     *
+     * @return an {@link Optional} containing the {@link JsonPathExtractor} for ID
+     *         extraction.
+     */
     public Optional<JsonPathExtractor> id() {
         return Optional.ofNullable(id);
     }
 
+    /**
+     * Retrieves the configuration for role mapping.
+     *
+     * @return an {@link Optional} containing the {@link RolesMapping}
+     *         configuration.
+     */
     public Optional<RolesMapping> roles() {
         return Optional.ofNullable(roles);
     }
 
+    /**
+     * Retrieves the JSONPath extractor configuration for extracting the
+     * organization.
+     *
+     * @return an {@link Optional} containing the {@link JsonPathExtractor} for
+     *         organization extraction.
+     */
     public Optional<JsonPathExtractor> organization() {
         return Optional.ofNullable(organization);
     }
@@ -88,49 +114,75 @@ public @Data class OpenIdConnectCustomClaimsConfigProperties {
         return Optional.ofNullable(provider.get(providerName));
     }
 
+    /**
+     * Configuration for extracting roles from OIDC claims.
+     * <p>
+     * This class defines transformation rules for role extraction, including case
+     * formatting, normalization, and whether extracted roles should replace or
+     * append to existing ones.
+     * </p>
+     */
     @Accessors(chain = true)
     public static @Data class RolesMapping {
 
         private JsonPathExtractor json = new JsonPathExtractor();
 
         /**
-         * Whether to return mapped role names as upper-case
+         * Whether to return mapped role names in uppercase.
          */
         private boolean uppercase = true;
 
         /**
-         * Whether to remove special characters and replace spaces by underscores
+         * Whether to normalize role names by removing special characters and replacing
+         * spaces with underscores.
          */
         private boolean normalize = true;
 
         /**
-         * Whether to append the resolved role names to the roles given by the OAuth2
-         * authentication (true), or replace them (false).
+         * Whether to append the extracted roles to existing roles (true), or replace
+         * them (false).
          */
         private boolean append = true;
 
+        /**
+         * Retrieves the JSONPath extractor for roles.
+         *
+         * @return an {@link Optional} containing the {@link JsonPathExtractor} for role
+         *         extraction.
+         */
         public Optional<JsonPathExtractor> json() {
             return Optional.ofNullable(json);
         }
 
+        /**
+         * Extracts and applies roles from the provided claims to the given user.
+         *
+         * @param claims The OIDC claims from which roles should be extracted.
+         * @param target The {@link GeorchestraUser} to which the roles should be
+         *               applied.
+         */
         public void apply(Map<String, Object> claims, GeorchestraUser target) {
+            json().ifPresent(oidcClaimsConfig -> {
+                List<String> rawValues = oidcClaimsConfig.extract(claims);
+                List<String> oidcRoles = rawValues.stream().map(this::applyTransforms).toList(); // Ensure the resulting
+                                                                                                 // list is mutable
 
-            json().ifPresent(json -> {
-                List<String> rawValues = json.extract(claims);
-                List<String> roles = rawValues.stream().map(this::applyTransforms)
-                        // make sure the resulting list is mutable, Stream.toList() is not
-                        .collect(Collectors.toList());
-                if (roles.isEmpty()) {
+                if (oidcRoles.isEmpty()) {
                     return;
                 }
-                if (append) {
-                    target.getRoles().addAll(0, roles);
-                } else {
-                    target.setRoles(roles);
+                if (!append) {
+                    target.getRoles().clear();
                 }
+                target.getRoles().addAll(0, oidcRoles);
             });
         }
 
+        /**
+         * Applies configured transformations to a role value.
+         *
+         * @param value The original role value.
+         * @return The transformed role value.
+         */
         private String applyTransforms(String value) {
             String result = uppercase ? value.toUpperCase() : value;
             if (normalize) {
@@ -139,32 +191,44 @@ public @Data class OpenIdConnectCustomClaimsConfigProperties {
             return result;
         }
 
+        /**
+         * Normalizes a role string by:
+         * <ul>
+         * <li>Applying Unicode Normalization (NFC form).</li>
+         * <li>Removing diacritical marks (accents).</li>
+         * <li>Replacing whitespace with underscores.</li>
+         * <li>Removing special characters.</li>
+         * </ul>
+         *
+         * @param value The original role string.
+         * @return The normalized role string.
+         */
         public String normalize(@NonNull String value) {
-            // apply Unicode Normalization (NFC: a + ◌̂ = â) (see
-            // https://www.unicode.org/reports/tr15/)
+            // Apply Unicode Normalization (NFC: a + ◌̂ = â)
             String normalized = Normalizer.normalize(value, Form.NFC);
 
-            // remove unicode accents and diacritics
+            // Remove diacritical marks
             normalized = normalized.replaceAll("\\p{InCombiningDiacriticalMarks}+", "");
 
-            // replace all whitespace groups by a single underscore
-            normalized = value.replaceAll("\\s+", "_");
+            // Replace all whitespace with underscores
+            normalized = normalized.replaceAll("\\s+", "_");
 
-            // remove remaining characters like parenthesis, commas, etc
-            normalized = normalized.replaceAll("[^a-zA-Z0-9_]", "");
-            return normalized;
+            // Remove remaining special characters
+            return normalized.replaceAll("[^a-zA-Z0-9_]", "");
         }
     }
 
+    /**
+     * Extracts values from OIDC claims using JSONPath expressions.
+     */
     @Accessors(chain = true)
     public static @Data class JsonPathExtractor {
+
         /**
-         * JsonPath expression(s) to extract the role names from the
-         * {@literal Map<String, Object>} containing all OIDC authentication token
-         * claims.
+         * List of JSONPath expressions to extract values from OIDC claims.
          * <p>
-         * For example, if the claims map contains a JSON object under the
-         * {@literal groups_json} key with the value
+         * Example:
+         * </p>
          * 
          * <pre>
          * {@code
@@ -176,13 +240,12 @@ public @Data class OpenIdConnectCustomClaimsConfigProperties {
          *         "parameter": []
          *       }
          *     ]
-         *   ]
+         * ]
          * }
          * </pre>
          * 
-         * The JsonPath expression {@literal $.groups_json[0][0].name} would match only
-         * the first group name, while the expression {@literal $.groups_json..['name']}
-         * would match them all to a {@code List<String>}.
+         * The JSONPath expression `$.groups_json[0][0].name` extracts the first group
+         * name, while `$.groups_json..['name']` extracts all group names into a list.
          */
         private List<String> path = new ArrayList<>();
 
@@ -194,16 +257,24 @@ public @Data class OpenIdConnectCustomClaimsConfigProperties {
         }
 
         /**
-         * @param claims
-         * @return
+         * Extracts values from the provided OIDC claims using the configured JSONPath
+         * expressions.
+         *
+         * @param claims The OIDC claims map.
+         * @return A list of extracted values.
          */
         public @NonNull List<String> extract(@NonNull Map<String, Object> claims) {
-            return this.path.stream()//
-                    .map(jsonPathExpression -> this.extract(jsonPathExpression, claims))//
-                    .flatMap(List::stream)//
-                    .collect(Collectors.toList());
+            return this.path.stream().map(jsonPathExpression -> this.extract(jsonPathExpression, claims))
+                    .flatMap(List::stream).toList();
         }
 
+        /**
+         * Extracts values from the given claims using a single JSONPath expression.
+         *
+         * @param jsonPathExpression The JSONPath expression.
+         * @param claims             The claims map.
+         * @return A list of extracted values.
+         */
         private List<String> extract(final String jsonPathExpression, Map<String, Object> claims) {
             if (!StringUtils.hasText(jsonPathExpression)) {
                 return List.of();
@@ -225,30 +296,32 @@ public @Data class OpenIdConnectCustomClaimsConfigProperties {
                 return List.of();
             }
 
-            if (null == matched) {
-                log.warn("The JSONPath expession {} evaluates to null", jsonPathExpression);
+            if (matched == null) {
+                log.warn("The JSONPath expression {} evaluates to null", jsonPathExpression);
                 return List.of();
             }
 
             final List<?> list = (matched instanceof List) ? (List<?>) matched : List.of(matched);
 
-            List<String> values = IntStream.range(0, list.size())//
-                    .mapToObj(list::get)//
-                    .filter(Objects::nonNull)//
-                    .map(value -> validateValueIsString(jsonPathExpression, value))//
-                    .collect(Collectors.toList());
-
-            return values;
+            return IntStream.range(0, list.size()).mapToObj(list::get).filter(Objects::nonNull)
+                    .map(value -> validateValueIsString(jsonPathExpression, value)).toList();
         }
 
-        private String validateValueIsString(final String jsonPathExpression, @NonNull Object v) {
-            if (v instanceof String)
-                return (String) v;
-
-            String msg = String.format("The JSONPath expression %s evaluates to %s instead of String. Value: %s",
-                    jsonPathExpression, v.getClass().getCanonicalName(), v);
-            throw new IllegalStateException(msg);
-
+        /**
+         * Ensures that extracted values are of type {@link String}.
+         *
+         * @param jsonPathExpression The JSONPath expression used.
+         * @param value The extracted value.
+         * @return The extracted value as a string.
+         * @throws IllegalStateException If the extracted value is not a string.
+         */
+        private String validateValueIsString(final String jsonPathExpression, @NonNull Object value) {
+            if (value instanceof String val) {
+                return val;
+            }
+            throw new IllegalStateException(String.format(
+                    "The JSONPath expression %s evaluates to %s instead of String. Value: %s",
+                    jsonPathExpression, value.getClass().getCanonicalName(), value));
         }
     }
 }
